# noah-research

./: .gitmodules  README.md
BERT_CoQA/: README.md
BO/: README.md
EvoFabric/: .readthedocs.yaml  README.md  README_zh.md  pyproject.toml
EvoFabric/docs/: requirements.txt
EvoFabric/docs/source/: conf.py  index.rst
EvoFabric/docs/source/APIReference/: logger.rst  plugin_manager.rst
EvoFabric/docs/source/Applications/: kernel_evolve.rst  rethinker.rst  sop2workflow.rst
EvoFabric/docs/source/Community/: introduction.rst
EvoFabric/docs/source/DeveloperGuide/: guide.rst
EvoFabric/docs/source/UserGuide/: BuildFirstAgent.rst  Factory.rst  GraphDebugger.rst  Plugins.rst
EvoFabric/docs/source/_static/: custom.css
EvoFabric/evofabric/: __init__.py  logger.py
EvoFabric/evofabric/app/: __init__.py
EvoFabric/evofabric/app/kernel_evolve/: __init__.py
EvoFabric/evofabric/app/rethinker/: __init__.py  _config.py  _graph.py
EvoFabric/evofabric/app/sop2workflow/: __init__.py  _base.py  _generator.py  _prompt.py
EvoFabric/evofabric/core/agent/: __init__.py  _agent.py  _user_node.py
EvoFabric/evofabric/core/clients/: __init__.py  _base.py  _openai.py  _pangu.py  _rag_clients.py
EvoFabric/evofabric/core/factory/: __init__.py  _factory.py  _function.py  _state.py  _utils.py
EvoFabric/evofabric/plugin_manager/: __init__.py
EvoFabric/examples/SwiftMem/: Readme.md  env_example  requirements.txt
EvoFabric/examples/rethinker-agent-framework/: README.md  evaluation.py  run.py  test_tools.py
EvoFabric/examples/sop2workflow/: README.md  exmaple_on_sop_bench.py
(+1565 files in other folders)
